JavaScript/rediscovering_javascript/variables/output/extractNoRedefine.output
let max = 200;
    ^

SyntaxError: Identifier 'max' has already been declared
